--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "email-app2",
   "version": "0.0.0",
-  "homepage": "https://congnam18165.github.io/email-app/",
+  
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "test": "ng test"
+    
   },
   "private": true,
   "dependencies": {
